tests/_resources/error_gcns/E013_misspelled_component.gcn
# Error: Misspelled component name (identites instead of identities)
block FIRM
{
    identites
    {
        Y[] = K[] * L[];
    };
};
